Changed use of deprecated URL constructor