@@ -31,7 +31,8 @@ import de.fraunhofer.iosb.ilt.statests.ServerVersion;
 import de.fraunhofer.iosb.ilt.statests.util.EntityUtils;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -92,15 +93,15 @@ public abstract class AbstractAuthTests extends AbstractTestClass {
     protected SensorThingsService createService() {
         if (!sSrvc.isEndpointSet()) {
             try {
-                sSrvc.setEndpoint(new URL(serverSettings.getServiceUrl(version)));
-            } catch (MalformedURLException ex) {
+                sSrvc.setEndpoint(new URI(serverSettings.getServiceUrl(version)));
+            } catch (MalformedURLException | URISyntaxException ex) {
                 throw new IllegalArgumentException("Serversettings contains malformed URL.", ex);
             }
         }
         try {
             return new SensorThingsService(sSrvc.getModelRegistry())
-                    .setEndpoint(new URL(serverSettings.getServiceUrl(version)));
-        } catch (MalformedURLException ex) {
+                    .setEndpoint(new URI(serverSettings.getServiceUrl(version)));
+        } catch (MalformedURLException | URISyntaxException ex) {
             throw new IllegalArgumentException("Serversettings contains malformed URL.", ex);
         }
     }
