@@ -52,6 +52,7 @@ import de.fraunhofer.iosb.ilt.statests.util.HTTPMethods;
 import de.fraunhofer.iosb.ilt.statests.util.Utils;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
@@ -277,15 +278,15 @@ public abstract class FineGrainedAuthTests extends AbstractTestClass {
     private SensorThingsService createService() {
         if (!baseService.isEndpointSet()) {
             try {
-                baseService.setEndpoint(new URL(serverSettings.getServiceUrl(version)));
-            } catch (MalformedURLException ex) {
+                baseService.setEndpoint(new URI(serverSettings.getServiceUrl(version)));
+            } catch (URISyntaxException | MalformedURLException ex) {
                 throw new IllegalArgumentException("Serversettings contains malformed URL.", ex);
             }
         }
         try {
             return new SensorThingsService(baseService.getModelRegistry())
-                    .setEndpoint(new URL(serverSettings.getServiceUrl(version)));
-        } catch (MalformedURLException ex) {
+                    .setEndpoint(new URI(serverSettings.getServiceUrl(version)));
+        } catch (URISyntaxException | MalformedURLException ex) {
             throw new IllegalArgumentException("Serversettings contains malformed URL.", ex);
         }
     }
